--- a/app/src/main/res/layout/text_layout.xml
+++ b/app/src/main/res/layout/text_layout.xml
@@ -20,14 +20,7 @@
 
     <ImageView
         android:layout_height="32dp"
-        app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/imageView"
-        android:padding="20dp"
-        android:paddingBottom="20dp"
-        android:paddingEnd="20dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingStart="20dp"
-        android:paddingTop="20dp"
-        android:layout_width="32dp" />
+        android:layout_width="32dp"
+        android:background="@color/colorAccent" />
 </LinearLayout>
