--- a/app/src/main/res/layout/activity_about_activiti.xml
+++ b/app/src/main/res/layout/activity_about_activiti.xml
@@ -8,6 +8,22 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ru.banana.textquest.AboutActiviti">
+    tools:context="ru.banana.textquest.AboutActiviti"
+    android:background="@color/colorAccent">
 
+    <TextView
+        android:text="Автор: Бабаян Сергей. This is test!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Company: Digital Banana"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView3" />
 </RelativeLayout>
