--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,4 +8,10 @@
         android:id="@+id/about_item"
         app:showAsAction="always"
         android:title="Об авторе" />
+    <item
+        android:id="@+id/perezapusk_item"
+        app:showAsAction="always"
+        android:title="Перезапуск Уровня" />
+
+
 </menu>
