--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#0027ff</color>
     <color name="colorPrimaryDark">#452aba</color>
-    <color name="colorAccent">#ff0008</color>
+    <color name="colorAccent">#9b60b9b9</color>
 </resources>
