--- a/app/src/main/res/layout/activity_start_activiti.xml
+++ b/app/src/main/res/layout/activity_start_activiti.xml
@@ -27,8 +27,7 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/start_picture"
         android:id="@+id/imageView2"
-        android:layout_marginTop="27dp"
-        android:layout_below="@+id/textView"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
 </RelativeLayout>
